name:                BananaDay
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Chobbes/BananaDay#readme
license:             BSD3
license-file:        LICENSE
author:              Calvin Beck
maintainer:          calvin@disgruntledcode.com
copyright:           Calvin Beck (2016)
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable BananaDay
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , BananaDay
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Chobbes/BananaDay
